--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="d-flex justify-content-center mt-9 mb-3">
                            
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/imkeshriraj/"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="https://leetcode.com/keshrirajj/"><i class="fab bi-code-slash"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://leetcode.com/imkeshriraj/"><i class="fab bi-code-slash"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/imkeshriraj/"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
@@ -444,7 +444,7 @@
                             <div class="d-flex justify-content-center mb-4">
                                 
                                 <a class="btn btn-dark btn-square mx-1" href="https://www.linkedin.com/in/imkeshriraj/"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="https://leetcode.com/keshrirajj/"><i class="fab bi-code-slash"></i></a>
+                                <a class="btn btn-dark btn-square mx-1" href="https://leetcode.com/imkeshriraj/"><i class="fab bi-code-slash"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="https://www.instagram.com/keshrirajj/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <!-- <div class="d-flex justify-content-center mb-3">
