--- a/index.html
+++ b/index.html
@@ -228,21 +228,21 @@
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">SDE-1</h5>
                                 <p class="mb-2">Aspire | <small>July 2023 - present</small></p>
-                                <p><strong>Skills</strong> JavaScript eXtension (JSX) · scss · Ant Design · Front-end Development · HTML5 · React.js</p>
+                                <p><strong>Skills :</strong> JavaScript eXtension (JSX) · scss · Ant Design · Front-end Development · HTML5 · React.js</p>
 
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Frontend Developer</h5>
                                 <p class="mb-2">CommerceUp | <small>Mar 2022 - July 2023</small></p>
-                                <p><strong>Skills</strong> AngularJS · Front-end Development · Git · Xcode · Android Studio</p>
+                                <p><strong>Skills :</strong> AngularJS · Front-end Development · Git · Xcode · Android Studio</p>
 
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Frontend Developer</h5>
                                 <p class="mb-2">Meau.in | <small>Oct 2020 - Mar 2022</small></p>
-                                <p> <strong>Skills</strong>  Front-end Development · Git · HTML · Web Development · Video Editing</p>
+                                <p> <strong>Skills :</strong>  Front-end Development · Git · HTML · Web Development · Video Editing</p>
                             </div>
                            
                         </div>
