--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-lg-6 col-xl-4">
+                            <!-- <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">10</h1>
                                     <div class="ps-3">
@@ -111,8 +111,8 @@
                                         <h5 class="mb-0">Clients</h5>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4 col-lg-6 col-xl-4">
+                            </div> -->
+                            <!-- <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1>
                                     <div class="ps-3">
@@ -120,7 +120,7 @@
                                         <h5 class="mb-0">Projects</h5>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </section>
                     <!-- About End -->
@@ -181,7 +181,7 @@
                                
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Git</p>
+                                        <p class="mb-2">Git & Github</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
