fixed typo error

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <a href="./img/cv/Aditya's ResumeWP.pdf" class="btn w-50 border-end">Download CV</a>
                             <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a>
                         </div>
-                    </div>s
+                    </div>
                 </div>
                 <div class="col-lg-8">
                     <!-- About Start -->
