--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
                         <img class="w-100 img-fluid mb-4" src="https://raw.githubusercontent.com/keshrirajj/my-portfolio/master/img/image%20(2).png    " alt="Image">
-                        <h1 class="text-primary mt-2">Aditya Raj (keshrirajj)</h1>
+                        <h1 class="text-primary mt-2">Aditya Raj (imkeshriraj)</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
                             <div class="typed-text d-none">Front End Developer, Apps Developer</div>
