added project section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">3</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Complete</p>
                                         <h5 class="mb-0">Projects</h5>
@@ -245,6 +245,44 @@
                                 <p> <strong>Skills</strong>  Front-end Development · Git · HTML · Web Development · Video Editing</p>
                             </div>
                            
+                        </div>
+                    </section>
+                    <!-- Expericence End -->
+
+
+                    <!-- Expericence Start -->
+                    <section class="py-5 wow fadeInUp" data-wow-delay="0.1s">
+                        <h1 class="title pb-3 mb-5">Projects</h1>
+                        <div class="border-start border-2 border-light pt-2 ps-5">
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">Amazon India Clone</h5>
+                                <p class="mb-2">Developed a Amazon Shopping application using React js and node js with firebase login System.</p>
+                                <p><strong></strong >React.js · HTML5 · scss · firebase</p>
+                                    <a target="_blank" href="https://github.com/imkeshriraj/amazon-clone-react">Github repository</a>
+                                <br>
+                                    <a href="https://clone-5ea01.web.app/" target="_blank">Live Link</a>
+
+                            </div>
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">URL shortner</h5>
+                                <p class="mb-2">"Check out my new URL shortener! It makes long links short and easy to share. Perfect for social media and emails. Plus, it tracks link clicks. Try it now!</p>
+                                <p>Node.js · React.js · REST APIs · MongoDB · Ant Design · Render</p>
+                                <a target="_blank" href="https://github.com/imkeshriraj/React-Url-Shortner">Frontend repository & </a>
+                                <a target="_blank" href="https://github.com/imkeshriraj/UrlShortnerApis">Backend repository</a>
+                                <br>
+                                <a href="https://clone-5ea01.web.app/" target="_blank">Live Link</a>
+                            </div>
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1"> Social Media for college</h5>
+                                <p class="mb-2">Social media for college to find hidden talents of students.</p>
+                                <p> HTML · css · JavaScript · php · Photography ·Git · Video Editing · Front-end Development </p>
+                                <a target="_blank" href="https://github.com/imkeshriraj/social-media-for-college">Github repository</a>
+
+
+                            </div>                          
                         </div>
                     </section>
                     <!-- Expericence End -->
