--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
                             <div class="typed-text d-none">Full stack Developer, Apps Developer</div>
                         </div>
-                        <div class="d-flex justify-content-center mt-9 mb-3">
+                        <div class="d-flex justify-content-center mt-3 mb-3">
                            
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/imkeshriraj/"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="https://leetcode.com/imkeshriraj/"><i class="fab bi-code-slash"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://codolio.com/profile/imkeshriraj"><i class="fab bi-code-slash"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/imkeshriraj/"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
@@ -88,9 +88,6 @@
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Address:</span> Chandrelok, Gurgaon,Haryana.
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Freelance:</span> Not Available
                             </div>
                         </div>
                         <div class="row g-4">
@@ -480,7 +477,7 @@
                             <div class="d-flex justify-content-center mb-4">
                                 
                                 <a class="btn btn-dark btn-square mx-1" href="https://www.linkedin.com/in/imkeshriraj/"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="https://leetcode.com/imkeshriraj/"><i class="fab bi-code-slash"></i></a>
+                                <a class="btn btn-dark btn-square mx-1" href="https://codolio.com/profile/imkeshriraj"><i class="fab bi-code-slash"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="https://www.instagram.com/imkeshriraj/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <!-- <div class="d-flex justify-content-center mb-3">
